k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warm-up-bot
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
